--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,20 +3,20 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
+                    <h2>Acerca de mi</h2>
                     <hr class="star-light">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>Soy un creativo al servicio de la humanidad. Durante 15 años he estado trabajando al servicio de la memética. He creado memes tan conocidos como "El Perro del Lusho", "El Niño Iluminati", "Las Chalas Zico" entre otros. Además me he especializado en el UX Writing, redactando manuales de usuarios y tutoriales para apps y guiones de videojuegos.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
+                    <p>Con conocimientos en planificación y ejecución de estrategia SEO, medición de conversiones, generación de informes y presentación de métricas. Manejo Google Adwords, Facebook Business Manager y Google Analytics. Poseo experiencia en el manejor de comunidades altamente participativas, tanto en el área de la entretención como en el mundo financiero.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="https://github.com/jeromelachaud/freelancer-theme" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
+                        <i class="fa fa-download"></i> Baja mi CV
                     </a>
                 </div>
             </div>
