--- a/_includes/about.html
+++ b/_includes/about.html
@@ -15,7 +15,7 @@
                     <p>Con conocimientos en planificación y ejecución de estrategia SEO, medición de conversiones, generación de informes y presentación de métricas. Manejo Google Adwords, Facebook Business Manager y Google Analytics. Poseo experiencia en el manejor de comunidades altamente participativas, tanto en el área de la entretención como en el mundo financiero.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="https://github.com/jeromelachaud/freelancer-theme" class="btn btn-lg btn-outline">
+                    <a href="https://robok3000.github.io/freelancer/cvpedrotorrealba.pdf" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> Baja mi CV
                     </a>
                 </div>
